# MBT_KUCAS_2020

./: CMakeLists.txt  CTSW.cao  KUCAS.init  KUCAS.xml  LICENSE  MBT_KUCAS.cpp  MBT_KUCAS.h  README.md  test.init
DetecObj/: CMakeLists.txt  DetecObj.cpp  DetecObj.h
VidProc/: CMakeLists.txt  VidProc.cpp  VidProc.h
